k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loja-veloz
  labels:
    # Pod Security Admission: perfil "restricted" aplicado (bloqueia pods privilegiados/root).
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
